[package]
name = "src"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = "1.0.137"
anyhow = "1.0.95"
async-trait = "0.1.85"